language/move-lang/tests/move_check/parser/spec_parsing_inside_fun.exp
error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:32:9 ───
    │
 32 │         spec {} + 1;
    │         ------- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │         ^^^^^^^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:32:9 ───
    │
 32 │         spec {} + 1;
    │         ------- Is not compatible with: '()'
    │                   - The type: integer
    │                   ^ Incompatible arguments to '+'
    │

error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:32:9 ───
    │
 32 │         spec {} + 1;
    │         ------- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │                   ^ Invalid argument to '+'
    │

error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:33:9 ───
    │
 33 │         spec {} && spec {};
    │         ------- The type: '()'
    │         ------- Is not compatible with: 'bool'
    │         ^^^^^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:33:9 ───
    │
 33 │         spec {} && spec {};
    │         ------- Is not compatible with: 'bool'
    │                    ------- The type: '()'
    │                    ^^^^^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/parser/spec_parsing_inside_fun.move:34:9 ───
    │
 34 │         &mut spec {};
    │         ^^^^^^^^^^^^ Invalid borrow
    │              ------- Expected a single non-reference type, but found: '()'
    │

